// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-jSUZER sc-jrcTuL  jHcAJm hmgJOA aje-input aje-input has-error"
  >
    <label
      class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
      for="TextInput-:r0:-input"
    >
      Text Label
    </label>
    <p
      class="sc-hLBbgP bLlziI aje-label--message"
    >
      message
    </p>
    <input
      aria-describedby="TextInput-:r0:-error"
      class="sc-gKPRtg gMwzJI"
      id="TextInput-:r0:-input"
      placeholder="placeholder"
      type="text"
      value="content"
    />
    <p
      class="sc-eDvSVe kXVgQt aje-label--error"
      id="TextInput-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-jSUZER sc-jrcTuL  jHcAJm hmgJOA aje-input--floating aje-input--floating has-error"
  >
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-:r1:-error"
        class="sc-gKPRtg gMwzJI"
        id="TextInput-:r1:-input"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class="sc-dkrFOg hmuQfz aje-label"
        for="TextInput-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="sc-eDvSVe kXVgQt aje-label--error"
      id="TextInput-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
